# trabajo_practico_aprendizaje_maquina_II

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
airflow/dags/: ETL_dag.py  data_pipeline.py  seed_raw_data.py  training_pipeline.py
airflow/secrets/: connections.yaml  variables.yaml
api/: main.py
dockerfiles/airflow/: Dockerfile  requirements.txt
dockerfiles/fastapi/: Dockerfile  requirements.txt
dockerfiles/mlflow/: Dockerfile  requirements.txt
dockerfiles/postgres/: init-airflow-db.sql
dockerfiles/streamlit/: Dockerfile
modelo_ml/: pyproject.toml
modelo_ml/datasets/: optuna.db  test_data.csv  test_data_pca.csv  train_data.csv  train_data_pca.csv
modelo_ml/datasets/cache/: ada_oob.joblib  ada_pca_oob.joblib  baseline.joblib  baseline_pca.joblib  bosque_aleatorio_oob.joblib  bosque_aleatorio_pca_oob.joblib  lgb_oob.joblib  lgb_pca_oob.joblib  lr_oob.joblib  lr_pca_oob.joblib  svm_oob.joblib  svm_pca_oob.joblib  svr_oob.joblib  svr_pca_oob.joblib  tree_oob.joblib  tree_pca_oob.joblib  xgb_oob [OOB].joblib  xgb_oob.joblib  xgb_pca_oob.joblib
modelo_ml/notebooks/: TPFinal_Parte1.ipynb  TPFinal_Parte2.ipynb
src/: __init__.py  config.py  data.py  evaluate.py  features.py  train.py  train_model.py
streamlit_app/: app.py
