[project]
name = "aprendizaje-de-maquina-tp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "joblib>=1.4.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "lightgbm>=4.5.0",
    "matplotlib>=3.10.8",
    "missingno>=0.5.2",
    "optuna>=4.0.0",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "xgboost>=2.1.0",
    "shap>=0.51.0",
]
